Updated About me

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <!-- About Section -->
         <section id="about">
             <h2>The Profile</h2>
-            <p class="subtitle">A highly driven Computer Science Engineering student focused on building strong
-                fundamentals in computing.</p>
+
 
             <div class="grid-container">
                 <div class="card">
@@ -50,6 +49,25 @@
                 <div class="card">
                     <h3>Traits</h3>
                     <p>Focused · Determined · Curious<br>Strong Leadership & Logic<br>Consistent Learner</p>
+                </div>
+            </div>
+
+            <!-- Scroll Down Content -->
+            <div class="about-wrapper"
+                style="margin-top: 50px; padding-top: 30px; border-top: 1px solid rgba(255,255,255,0.1);">
+                <h3
+                    style="text-align:center; font-family: var(--font-heading); font-size: 2rem; margin-bottom: 30px; font-style:italic;">
+                    About Me</h3>
+                <div class="about-container">
+                    <img src="naveenimage.jpeg" class="profile-pic" alt="Naveen S">
+                    <p class="subtitle">I’m Naveen S, a Computer Science Engineering undergraduate
+                        with a focused interest in programming, data management, and the fundamentals of intelligent
+                        systems. I am dedicated to strengthening my technical capabilities through structured learning,
+                        real-world projects, and consistent practice. I approach engineering with a balance of
+                        analytical
+                        thinking and practical implementation, and I am eager to contribute to meaningful
+                        technology-driven
+                        work as I progress in my career.</p>
                 </div>
             </div>
         </section>
